--- a/src/app/ng-switch-example/ng-switch-example.component.css
+++ b/src/app/ng-switch-example/ng-switch-example.component.css
@@ -2,10 +2,10 @@
   padding-top: 40px;
   color: yellow;
   font-weight: bold;
-  border-color: #1a531b;
+  border-color: #75b2e0;
 }
 
 .ui.raised.segment{
-  background: #6b9593;
+  background: #90bac6;
 }
 
