--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 
 <app-ng-switch-example></app-ng-switch-example>
 <app-ng-style-example></app-ng-style-example>
+<app-ng-class-example></app-ng-class-example>
