NgFor example and fixed some headers color for other Directives

--- a/src/app/ng-class-example/ng-class-example.component.html
+++ b/src/app/ng-class-example/ng-class-example.component.html
@@ -1,4 +1,5 @@
 <div class="ngClassDemo">
+  <h5 class="ui horizontal divider header color ">NgClass Example</h5>
   <div [ngClass]="{bordered: false}">This is never bordered</div>
   <div [ngClass]="{bordered: true}">This is always bordered</div>
 
