--- a/src/app/ng-style-example/ng-style-example.component.html
+++ b/src/app/ng-style-example/ng-style-example.component.html
@@ -1,3 +1,4 @@
+<h5 class="ui horizontal divider header color ">NgStyle Example</h5>
 <div class="body">
   <h4 class="ui horizontal divider header">
     style.background-color
