--- a/src/app/ng-switch-example/ng-switch-example.component.html
+++ b/src/app/ng-switch-example/ng-switch-example.component.html
@@ -1,5 +1,5 @@
 
-
+<h5 class="ui horizontal divider header color">NgSwitch Example</h5>
 <h4 class="ui horizontal divider header">
   Current choice is {{ choice }}
 </h4>
