--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,4 @@
 <app-ng-switch-example></app-ng-switch-example>
 <app-ng-style-example></app-ng-style-example>
 <app-ng-class-example></app-ng-class-example>
+<app-ng-for-example></app-ng-for-example>
