--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
 <app-ng-style-example></app-ng-style-example>
 <app-ng-class-example></app-ng-class-example>
 <app-ng-for-example></app-ng-for-example>
+<app-ng-non-bindable-example></app-ng-non-bindable-example>
